# rl-vista

./: LICENSE  README.md  main.py  pyproject.toml
app/: actor.py  application.py  config.py  goal.py  map.py  uiboard.py
app/components/: moveto.py  movetotarget.py
assets/sample/: config.py
examples/movements/: actor.py  application.py  config.py  goal.py  main.py  map.py  uiboard.py
examples/movements/components/: collider.py  movetoxy.py
rlv/core/: component.py  engine.py  entity.py  event.py  image.py  label.py  system.py
rlv/std/components/: keyboard.py  timer.py
rlv/std/entities/: uiboard.py
test/: test_rvl_core_system.py
