[tool.poetry]
name = "rl-vista"
version = "1.0.0"
description = "PyGame visualizer for Reinforcement Learning"
authors = ["Dim L. Feiron <norefle@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
