[tool.poetry]
name = "rl-vista"
version = "1.0.0"
description = "PyGame visualizer for Reinforcement Learning"
authors = ["Dim L. Feiron <norefle@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
